--- a/templates/layouts/admin/dashboard/footer.html
+++ b/templates/layouts/admin/dashboard/footer.html
@@ -4,7 +4,7 @@
     <div class="container-fluid justify-content-center">
       <!-- Investors<span> Chatbot</span> -->
       <p class="p-0 m-0 text-center">
-        © Copyright
+        © Copyright 2023
         <a class="text-danger" href="http://infobeans.com/"
           >Infobeans Technologies</a
         >. All Rights Reserved
