--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -78,6 +78,17 @@
         padding: 0;
         list-style: none;
       }
+      .overall-right:after {
+        position: absolute;
+        right: 0;
+        content: "";
+        top: 0;
+        height: 100%;
+        border: 1px solid #ccc;
+      }
+      .overall-right {
+        position: relative;
+      }
     </style>
   </head>
 
@@ -98,7 +109,7 @@
       </div>
       <div class="col-md-12">
         <div class="section d-flex align-items-center text-center">
-          <div class="w-50">
+          <div class="w-50 overall-right">
             <h2 class="text-dark mt-3 mb-3">Interviewer's Rating</h2>
             <ul>
               <li>
@@ -144,7 +155,7 @@
                   src="{{ base_dir }}/uploads/reports/graphs/_overall_candidate_text_report_{{overall.candidate_id}}.svg"
                 />
                 <h6 class="font-weight-bold text-dark">
-                  Test Sentiment Analysis
+                  Text Sentiment Analysis
                 </h6>
               </li>
               {% if overall.candidate_audio_report %}
@@ -175,16 +186,13 @@
       </div>
 
       {% set list_length = report_data|length %} {% for video_report,
-      video_process in report_data %} {% set index = loop.index %} {% if index <=
-      (list_length) %} 
-      
-      {% if index == list_length %}
-      {% set next_video_process=report_data[index-1][1] %}
-      {% else %}
-      {% set next_video_process=report_data[index][1] %}
-      {% endif %}
-
-      {% if (next_video_process.start_duration|int -3) <= video_process.end_duration|int <= ((next_video_process.start_duration|int) + 3) and video_process.speaker=='Interviewer' %}
+      video_process in report_data %} {% set index = loop.index %} {% if index
+      <= (list_length) %} {% if index == list_length %} {% set
+      next_video_process=report_data[index-1][1] %} {% else %} {% set
+      next_video_process=report_data[index][1] %} {% endif %} {% if
+      (next_video_process.start_duration|int -3) <=
+      video_process.end_duration|int <= ((next_video_process.start_duration|int)
+      + 3) and video_process.speaker=='Interviewer' %}
 
       <div class="question-wrapper mt-3">
         <h3 class="font-weight-bold text-dark">
@@ -222,8 +230,11 @@
           {% endif %}
         </div>
       </div>
- 
-      {% elif (next_video_process.start_duration|int -3) <= video_process.end_duration|int <= ((next_video_process.start_duration|int) + 3) and video_process.speaker == 'candidate' and video_process.start_duration != '0' %}
+
+      {% elif (next_video_process.start_duration|int -3) <=
+      video_process.end_duration|int <= ((next_video_process.start_duration|int)
+      + 3) and video_process.speaker == 'candidate' and
+      video_process.start_duration != '0' %}
 
       <div class="question-wrapper mt-3">
         <h3 class="font-weight-bold text-dark">
@@ -273,86 +284,81 @@
       </div>
       <div style="page-break-before: always"></div>
 
-      {% endif %} 
-      
-      {% if index == list_length %}
-        {% if video_process.speaker == 'candidate' %}
-        <div class="question-wrapper mt-3">
-          <h3 class="font-weight-bold text-dark">
-            <i
-              class="fa fa-check-circle"
-              aria-hidden="true"
-              style="color: #228b22"
-            ></i>
-            {{video_process.interview_transcript}}
-          </h3>
-          <div class="question-graphs d-flex align-items-center text-center">
-            <div class="w-50 p-3">
-              <img
-                class="w-100"
-                src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.svg"
-              />
-              <h6 class="font-weight-bold text-dark">Text Sentiment Analysis</h6>
-            </div>
-            <div class="w-50 p-3">
-              <img
-                class="w-100"
-                src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.svg"
-              />
-              <h6 class="font-weight-bold text-dark">Video Analysis</h6>
-            </div>
-            {% if video_report.audio_report %}
-            <div class="w-50 p-3">
-              <img
-                class="w-100"
-                src="{{ base_dir }}/uploads/reports/graphs/_audio_analysis_chart_{{video_report.video_process_id}}.svg"
-              />
-              <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
-            </div>
-            {% endif %}
+      {% endif %} {% if index == list_length %} {% if video_process.speaker ==
+      'candidate' %}
+      <div class="question-wrapper mt-3">
+        <h3 class="font-weight-bold text-dark">
+          <i
+            class="fa fa-check-circle"
+            aria-hidden="true"
+            style="color: #228b22"
+          ></i>
+          {{video_process.interview_transcript}}
+        </h3>
+        <div class="question-graphs d-flex align-items-center text-center">
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Text Sentiment Analysis</h6>
           </div>
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Video Analysis</h6>
+          </div>
+          {% if video_report.audio_report %}
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_audio_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
+          </div>
+          {% endif %}
         </div>
-        {%elif video_process.speaker == 'Interviewer'%}
-        <div class="question-wrapper mt-3">
-          <h3 class="font-weight-bold text-dark">
-            <i
-              class="fa fa-question-circle"
-              aria-hidden="true"
-              style="color: #aa142d"
-            ></i>
-            {{video_process.interview_transcript}}
-          </h3>
-          <div class="question-graphs d-flex align-items-center text-center">
-            <div class="w-50 p-3">
-              <img
-                class="w-100"
-                src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.svg"
-              />
-              <h6 class="font-weight-bold text-dark">Text Sentiment Analysis</h6>
-            </div>
-            <div class="w-50 p-3">
-              <img
-                class="w-100"
-                src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.svg"
-              />
-              <h6 class="font-weight-bold text-dark">Video Analysis</h6>
-            </div>
+      </div>
+      {%elif video_process.speaker == 'Interviewer'%}
+      <div class="question-wrapper mt-3">
+        <h3 class="font-weight-bold text-dark">
+          <i
+            class="fa fa-question-circle"
+            aria-hidden="true"
+            style="color: #aa142d"
+          ></i>
+          {{video_process.interview_transcript}}
+        </h3>
+        <div class="question-graphs d-flex align-items-center text-center">
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_text_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Text Sentiment Analysis</h6>
+          </div>
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_frame_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Video Analysis</h6>
+          </div>
 
-            {% if video_report.audio_report %}
-            <div class="w-50 p-3">
-              <img
-                class="w-100"
-                src="{{ base_dir }}/uploads/reports/graphs/_audio_analysis_chart_{{video_report.video_process_id}}.svg"
-              />
-              <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
-            </div>
-            {% endif %}
+          {% if video_report.audio_report %}
+          <div class="w-50 p-3">
+            <img
+              class="w-100"
+              src="{{ base_dir }}/uploads/reports/graphs/_audio_analysis_chart_{{video_report.video_process_id}}.svg"
+            />
+            <h6 class="font-weight-bold text-dark">Audio Analysis</h6>
           </div>
+          {% endif %}
         </div>
-        {% endif %}    
-      {% endif %}
-      
-      {% endif %} {% endfor %}
+      </div>
+      {% endif %} {% endif %} {% endif %} {% endfor %}
     </div>
     {% endif %}
   </body>
