Added changes to upload UI and created new file and UI

--- a/templates/auth/admin/login.html
+++ b/templates/auth/admin/login.html
@@ -4,7 +4,7 @@
 
 {% block body_block %}
     <div class="container-xxl">
-      <div class="authentication-basic container-p-y">
+      <div class="authentication-basic container-p-y" style="padding-top:10.625rem !important">
         <div class="authentication-inner">
             {% for field, errors in form.errors.items() %}
                 <div class="alert alert-error">
