--- a/static/admin/assets/css/demo.css
+++ b/static/admin/assets/css/demo.css
@@ -165,7 +165,7 @@
 }
 #upload-form .btn.btn-primary {
   background-color: #ffffff;
-  color: #373742;
+  color: #fff;
   border: 1px solid #e6e6ed;
   transition: 0.3s ease;
 }
