--- a/templates/layouts/admin/dashboard/footer.html
+++ b/templates/layouts/admin/dashboard/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<header class="navigation">
+<footer class="navigation">
   <nav class="navbar navbar-expand" id="navbar">
     <div class="container-fluid justify-content-center">
       <!-- Investors<span> Chatbot</span> -->
@@ -11,4 +11,4 @@
       </p>
     </div>
   </nav>
-</header>
+</footer>
