overall confidence calculation and same color pallete in graph pdf

--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -111,7 +111,7 @@
         <div class="section d-flex align-items-center text-center">
           <div class="w-50 overall-right">
             <h2 class="text-dark mt-3 mb-3">Interviewer's Rating</h2>
-              <h3> Overall confidence: {{  overall.overall_interviewer_confidence }}%</h3>
+              <h3> Overall Confidence: {{  overall.overall_interviewer_confidence }}%</h3>
             <ul>
               <li>
                 <img
@@ -142,7 +142,7 @@
           </div>
           <div class="w-50">
             <h2 class="text-dark mt-3 mb-3">Candidate's Rating</h2>
-            <h3> Overall confidence: {{ overall.overall_candidate_confidence }}%</h3>
+            <h3> Overall Confidence: {{ overall.overall_candidate_confidence }}%</h3>
             <ul>
               <li>
                 <img
