--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -111,7 +111,9 @@
         <div class="section d-flex align-items-center text-center">
           <div class="w-50 overall-right">
             <h2 class="text-dark mt-3 mb-3">Interviewer's Rating</h2>
-              <h3> Overall Confidence: {{  overall.overall_interviewer_confidence }}%</h3>
+              <h6> Confidence Score (CS): {{  overall.overall_interviewer_confidence['CS']}}%</h6>
+              <h6> Nervousness Score (NS): {{  overall.overall_interviewer_confidence['NS']}}%</h6>
+              <h6> Confidence Level (CL): {{  overall.overall_interviewer_confidence['CL']}}%</h6>
             <ul>
               <li>
                 <img
@@ -142,7 +144,9 @@
           </div>
           <div class="w-50">
             <h2 class="text-dark mt-3 mb-3">Candidate's Rating</h2>
-            <h3> Overall Confidence: {{ overall.overall_candidate_confidence }}%</h3>
+            <h6> Confidence Score (CS): {{  overall.overall_candidate_confidence['CS']}}%</h6>
+            <h6> Nervousness Score (NS): {{  overall.overall_candidate_confidence['NS']}}%</h6>
+            <h6> Confidence Level (CL): {{  overall.overall_candidate_confidence['CL']}}%</h6>
             <ul>
               <li>
                 <img
