--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -31,7 +31,7 @@ Interview Assessment {% endblock %} {% block head_styles %}
       <h2 class="m-4 text-center">
         <u>Interview Report of {{ candidate.name }}</u>
       </h2>
-      <a class="download_report" ="{{ candidate.report_url }}"
+      <a class="download_report" href="{{ candidate.report_url }}"
         ><button class="file-upload-button css-1ikvom0">
           <i class="fa fa-download"></i> Download Report
         </button></a
