--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -1,3 +1,11 @@
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
+
 <table class="table table-responsive table-bordered" id="candidate_list">
   <thead>
     <th>Name</th>
@@ -7,6 +15,28 @@
   </thead>
   <tbody>
     {% if candidates %} {% for candidate in candidates %}
+
+    <!-- The Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this item?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <a href="{{ url_for('delete_route', item_id=candidate.id) }}" class="btn btn-danger">Delete</a>
+      </div>
+    </div>
+  </div>
+</div>
+
     <tr>
       <td>{{ candidate.name or 'N/A' }}</td>
       <td>{{ candidate.user_data().full_name or 'N/A' }}</td>
@@ -39,6 +69,12 @@
         <!--<a target="_blank" href="{{ url_for('interview_analyzer.view_report', id=candidate.id) }}" class="btn btn-theme-white btn-sm "
         >Detail Report</a
         >-->
+        <a
+          target="_blank"
+          href="#"
+          class="btn btn-theme-white btn-sm"
+          data-toggle="modal"
+          data-target="#deleteModal"><i class="fa fa-trash-o"></i> Delete</a>
         {% else %} {% if candidate.video_analysis_status == "completed" %}
         <a
           href="{{ url_for('interview_analyzer.generate_report_command') }}?candidate={{ candidate.id }}"
@@ -62,8 +98,10 @@
       <td colspan="4">No Candidates Found.</td>
     </tr>
     {% endif %}
+
   </tbody>
 </table>
+
 
 <script>
     function reload_candidate_list_table() {
@@ -105,7 +143,7 @@
               console.error('AJAX error', status, error);
           }
           });
-
       });
   });
 </script>
+
