--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -226,7 +226,7 @@ Interview Assessment {% endblock %} {% block head_styles %}
                       data-text-report="{{video_report.text_dur_report}}"
                       data-audio-report="{{video_report.audio_report}}"
                     ></i>
-                    Interviewer's Score = CS:%, NS:%, CL:%
+                    Interviewer's Score = {{video_report.frame_dur_report|emotion_scores }}
                   </div>
                 {% elif ((next_video_process.start_duration|int -
                   3) <= video_process.end_duration|int <=
@@ -244,7 +244,7 @@ Interview Assessment {% endblock %} {% block head_styles %}
                       data-text-report="{{video_report.text_dur_report}}"
                       data-audio-report="{{video_report.audio_report}}"
                     ></i>
-                    Candidate's Score = CS:%, NS:%, CL:%
+                    Candidate's Score =  {{video_report.frame_dur_report|emotion_scores }}
                   </div>
                 </div>
                 <div
@@ -276,7 +276,7 @@ Interview Assessment {% endblock %} {% block head_styles %}
                     data-text-report="{{video_report.text_dur_report}}"
                     data-audio-report="{{video_report.audio_report}}"
                   ></i>
-                  Candidate's Score = CS:%, NS:%, CL:%
+                  Candidate's Score =  {{video_report.frame_dur_report|emotion_scores }}
                 </div>
               </div>
                 <div
