--- a/templates/admin/attendance/index.html
+++ b/templates/admin/attendance/index.html
@@ -11,13 +11,49 @@
      <div class="card-header d-flex justify-content-between border-bottom">
          <h4>My Attendance</h4>
          <div>
-             <a href="javascript:start_entry_camera()" class="btn btn-theme-white">Start Entry Camera</a>
-             <a href="javascript:start_exit_camera()" class="btn btn-theme-white">Start Exit Camera</a>
+{#             <a href="javascript:start_entry_camera()" class="btn btn-theme-white">Start Entry Camera</a>#}
+             {% if not is_camera_on or opened_camera == 'exit_camera' %}
+                 <a href="{{ url_for('attendance.start_camera',camera_type='entry_camera') }}" class="btn btn-theme-white">Start Entry Camera</a>
+             {% endif %}
+
+            {% if is_camera_on and opened_camera == 'entry_camera' %}
+                 <a href="{{ url_for('attendance.stop_camera',camera_type='entry_camera') }}" class="btn btn-theme-white">Stop Entry Camera</a>
+             {% endif %}
+
+
+            {% if not is_camera_on or opened_camera == 'entry_camera' %}
+                 <a href="{{ url_for('attendance.start_camera',camera_type='exit_camera') }}" class="btn btn-theme-white">Start Exit Camera</a>
+             {% endif %}
+
+            {% if is_camera_on and opened_camera == 'exit_camera' %}
+                 <a href="{{ url_for('attendance.stop_camera',camera_type='exit_camera') }}" class="btn btn-theme-white">Stop Exit Camera</a>
+             {% endif %}
+
          </div>
      </div>
      <div class="card-body pt-2 pb-2">
          <div class="row">
+             {% if is_camera_on %}
+             <div class="col-md-4">
+                 <img src="{{ url_for('attendance.video_feed_for_object') }}" style="width: 100%;" alt="">
+             </div>
+             {% endif %}
 
+             {% if is_camera_on %}
+            <div class="col-md-8">
+             {% else %}
+                 <div class="col-md-12">
+             {% endif %}
+                <table class="table table-responsive table-bordered" id="attendance_list" style="width: 100%">
+                  <thead>
+                    <th>Employee Name</th>
+                    <th>Entry Time</th>
+                    <th>Exit Time</th>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+             </div>
          </div>
      </div>
     </div>
@@ -90,12 +126,30 @@
 
 {% block body_scripts %}
     <script>
-        function start_entry_camera(){
-                alert('test1');
+        count =0;
+        function load_attendance_list(){
+            $.ajax({
+                url: '{{ url_for("attendance.fetch_attendance_list") }}',
+                type: 'POST',
+                dataType: 'json',
+                beforeSend:function(){
+                    $('.loader_wrapper').removeClass('d-none');
+                },
+                success:function(res){
+                    console.log(res);
+                    $('.loader_wrapper').addClass('d-none');
+                    $('#attendance_list tbody').html(res?.attendance_list)
+                    if(res?.ajax_reload == true && count > 1){
+                      location.reload()
+                    }
+                    count = count + 1;
+                }
+            });
         }
 
-        function start_exit_camera(){
-                alert('test2');
-        }
+        {% if is_camera_on %}
+            setInterval(load_attendance_list,5000);
+        {% endif %}
+    load_attendance_list();
     </script>
 {% endblock %}
